[tool.poetry]
name = "repo"
version = "0.0.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2.4"
black = {version = "^19.10b0", allows-prereleases = true}
pre-commit = "^1.20.0"
bump2version = "^0.5.11"
prospector = {version = "^1.1.7", extras = ["full"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
